ATLAS-1013: backend tests, wip: frontend